--- a/SPEEDLib Parallel Error Diffusion/SPEEDLib Parallel Error Diffusion.vcxproj
+++ b/SPEEDLib Parallel Error Diffusion/SPEEDLib Parallel Error Diffusion.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Source.cpp" />
     <ClCompile Include="SPEEDLib Parallel Error Diffusion.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
