--- a/SPEEDLib Parallel Error Diffusion/SPEEDLib Parallel Error Diffusion.vcxproj.filters
+++ b/SPEEDLib Parallel Error Diffusion/SPEEDLib Parallel Error Diffusion.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="SPEEDLib Parallel Error Diffusion.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
